# https://pypi.org/project/setupcfg-generator/
[metadata]
name = values
version = 2018.11.22
url = https://github.com/looking-for-a-job/values.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = list values

[options]
install_requires = 
	public
	setuptools
packages = 
	values
